// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`planning golden master (Task 021, Schritt 0) > freezes first-turn planning on good-mood 1`] = `
{
  "chicken:21072026:forced-breaker": {
    "candidateScore": "66.3529",
    "destination": {
      "x": 350,
      "y": 1260,
    },
    "movementId": "walk:350:1260",
    "movementKind": "walk",
    "movementScore": "19.1352",
    "preferenceFellBack": false,
    "selectedCandidateId": "breaker:rival-1:arc-1",
    "targetId": "rival-1",
    "weaponId": "breaker",
  },
  "chicken:21072026:preference": {
    "candidateScore": "70.1120",
    "destination": {
      "x": 610,
      "y": 1314,
    },
    "movementId": "walk:610:1314",
    "movementKind": "walk",
    "movementScore": "12.6410",
    "preferenceFellBack": false,
    "selectedCandidateId": "grenade:rival-1:arc-1",
    "targetId": "rival-1",
    "weaponId": "grenade",
  },
  "chicken:21072026:rejected": {
    "candidateScore": "88.1281",
    "destination": {
      "x": 350,
      "y": 1260,
    },
    "movementId": "walk:350:1260",
    "movementKind": "walk",
    "movementScore": "19.1352",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:rival-1:arc-1",
    "targetId": "rival-1",
    "weaponId": "rocket",
  },
  "chicken:21072026:rival": {
    "candidateScore": "80.0830",
    "destination": {
      "x": 1550,
      "y": 810,
    },
    "movementId": "walk:1550:810",
    "movementKind": "walk",
    "movementScore": "20.4631",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:crew-chicken:arc-1",
    "targetId": "crew-chicken",
    "weaponId": "rocket",
  },
  "chicken:21072127:forced-breaker": {
    "candidateScore": "65.3451",
    "destination": {
      "x": 350,
      "y": 1260,
    },
    "movementId": "walk:350:1260",
    "movementKind": "walk",
    "movementScore": "18.2601",
    "preferenceFellBack": false,
    "selectedCandidateId": "breaker:rival-1:arc-1",
    "targetId": "rival-1",
    "weaponId": "breaker",
  },
  "chicken:21072127:preference": {
    "candidateScore": "70.1840",
    "destination": {
      "x": 610,
      "y": 1314,
    },
    "movementId": "jump:610:1314",
    "movementKind": "jump",
    "movementScore": "13.6639",
    "preferenceFellBack": false,
    "selectedCandidateId": "grenade:rival-1:arc-1",
    "targetId": "rival-1",
    "weaponId": "grenade",
  },
  "chicken:21072127:rejected": {
    "candidateScore": "88.1482",
    "destination": {
      "x": 350,
      "y": 1260,
    },
    "movementId": "walk:350:1260",
    "movementKind": "walk",
    "movementScore": "18.2601",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:rival-1:arc-1",
    "targetId": "rival-1",
    "weaponId": "rocket",
  },
  "chicken:21072127:rival": {
    "candidateScore": "79.4804",
    "destination": {
      "x": 1290,
      "y": 836,
    },
    "movementId": "walk:1290:836",
    "movementKind": "walk",
    "movementScore": "21.9309",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:crew-chicken:arc-2",
    "targetId": "crew-chicken",
    "weaponId": "rocket",
  },
  "ghost:21072026:forced-breaker": {
    "candidateScore": "204.7017",
    "destination": {
      "x": 350,
      "y": 1260,
    },
    "movementId": "jump:350:1260",
    "movementKind": "jump",
    "movementScore": "39.5012",
    "preferenceFellBack": false,
    "selectedCandidateId": "breaker:rival-1:arc-1",
    "targetId": "rival-1",
    "weaponId": "breaker",
  },
  "ghost:21072026:preference": {
    "candidateScore": "206.1856",
    "destination": {
      "x": 610,
      "y": 1314,
    },
    "movementId": "jump:610:1314",
    "movementKind": "jump",
    "movementScore": "26.1808",
    "preferenceFellBack": false,
    "selectedCandidateId": "grenade:rival-1:arc-1",
    "targetId": "rival-1",
    "weaponId": "grenade",
  },
  "ghost:21072026:rejected": {
    "candidateScore": "221.9471",
    "destination": {
      "x": 350,
      "y": 1260,
    },
    "movementId": "jump:350:1260",
    "movementKind": "jump",
    "movementScore": "39.5012",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:rival-3:arc-5",
    "targetId": "rival-3",
    "weaponId": "rocket",
  },
  "ghost:21072026:rival": {
    "candidateScore": "80.1604",
    "destination": {
      "x": 1550,
      "y": 810,
    },
    "movementId": "walk:1550:810",
    "movementKind": "walk",
    "movementScore": "20.4631",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:crew-ghost:arc-1",
    "targetId": "crew-ghost",
    "weaponId": "rocket",
  },
  "ghost:21072127:forced-breaker": {
    "candidateScore": "203.6939",
    "destination": {
      "x": 350,
      "y": 1260,
    },
    "movementId": "jump:350:1260",
    "movementKind": "jump",
    "movementScore": "38.5668",
    "preferenceFellBack": false,
    "selectedCandidateId": "breaker:rival-1:arc-1",
    "targetId": "rival-1",
    "weaponId": "breaker",
  },
  "ghost:21072127:preference": {
    "candidateScore": "204.3237",
    "destination": {
      "x": 545,
      "y": 1316,
    },
    "movementId": "jump:545:1316",
    "movementKind": "jump",
    "movementScore": "26.5608",
    "preferenceFellBack": false,
    "selectedCandidateId": "grenade:rival-1:arc-1",
    "targetId": "rival-1",
    "weaponId": "grenade",
  },
  "ghost:21072127:rejected": {
    "candidateScore": "221.7915",
    "destination": {
      "x": 350,
      "y": 1260,
    },
    "movementId": "jump:350:1260",
    "movementKind": "jump",
    "movementScore": "38.5668",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:rival-3:arc-5",
    "targetId": "rival-3",
    "weaponId": "rocket",
  },
  "ghost:21072127:rival": {
    "candidateScore": "79.5950",
    "destination": {
      "x": 1290,
      "y": 836,
    },
    "movementId": "walk:1290:836",
    "movementKind": "walk",
    "movementScore": "21.9309",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:crew-ghost:arc-1",
    "targetId": "crew-ghost",
    "weaponId": "rocket",
  },
  "hornling:21072026:forced-breaker": {
    "candidateScore": "51.7395",
    "destination": {
      "x": 350,
      "y": 1260,
    },
    "movementId": "walk:350:1260",
    "movementKind": "walk",
    "movementScore": "20.3546",
    "preferenceFellBack": false,
    "selectedCandidateId": "breaker:rival-1:arc-1",
    "targetId": "rival-1",
    "weaponId": "breaker",
  },
  "hornling:21072026:preference": {
    "candidateScore": "75.0797",
    "destination": {
      "x": 350,
      "y": 1260,
    },
    "movementId": "walk:350:1260",
    "movementKind": "walk",
    "movementScore": "20.3546",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:rival-1:arc-1",
    "targetId": "rival-1",
    "weaponId": "rocket",
  },
  "hornling:21072026:rejected": {
    "candidateScore": "73.6276",
    "destination": {
      "x": 350,
      "y": 1260,
    },
    "movementId": "walk:350:1260",
    "movementKind": "walk",
    "movementScore": "20.3546",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:rival-1:arc-2",
    "targetId": "rival-1",
    "weaponId": "rocket",
  },
  "hornling:21072026:rival": {
    "candidateScore": "79.5317",
    "destination": {
      "x": 1550,
      "y": 810,
    },
    "movementId": "walk:1550:810",
    "movementKind": "walk",
    "movementScore": "20.4631",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:crew-hornling:arc-1",
    "targetId": "crew-hornling",
    "weaponId": "rocket",
  },
  "hornling:21072127:forced-breaker": {
    "candidateScore": "50.7317",
    "destination": {
      "x": 350,
      "y": 1260,
    },
    "movementId": "walk:350:1260",
    "movementKind": "walk",
    "movementScore": "19.8194",
    "preferenceFellBack": false,
    "selectedCandidateId": "breaker:rival-1:arc-1",
    "targetId": "rival-1",
    "weaponId": "breaker",
  },
  "hornling:21072127:preference": {
    "candidateScore": "75.0998",
    "destination": {
      "x": 350,
      "y": 1260,
    },
    "movementId": "walk:350:1260",
    "movementKind": "walk",
    "movementScore": "19.8194",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:rival-1:arc-1",
    "targetId": "rival-1",
    "weaponId": "rocket",
  },
  "hornling:21072127:rejected": {
    "candidateScore": "74.4134",
    "destination": {
      "x": 350,
      "y": 1260,
    },
    "movementId": "walk:350:1260",
    "movementKind": "walk",
    "movementScore": "19.8194",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:rival-1:arc-2",
    "targetId": "rival-1",
    "weaponId": "rocket",
  },
  "hornling:21072127:rival": {
    "candidateScore": "80.1566",
    "destination": {
      "x": 1290,
      "y": 836,
    },
    "movementId": "walk:1290:836",
    "movementKind": "walk",
    "movementScore": "21.9309",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:crew-hornling:arc-1",
    "targetId": "crew-hornling",
    "weaponId": "rocket",
  },
  "moki:21072026:forced-breaker": {
    "candidateScore": "66.3529",
    "destination": {
      "x": 350,
      "y": 1260,
    },
    "movementId": "walk:350:1260",
    "movementKind": "walk",
    "movementScore": "20.8258",
    "preferenceFellBack": false,
    "selectedCandidateId": "breaker:rival-1:arc-1",
    "targetId": "rival-1",
    "weaponId": "breaker",
  },
  "moki:21072026:preference": {
    "candidateScore": "70.1120",
    "destination": {
      "x": 610,
      "y": 1314,
    },
    "movementId": "jump:610:1314",
    "movementKind": "jump",
    "movementScore": "13.5663",
    "preferenceFellBack": false,
    "selectedCandidateId": "grenade:rival-1:arc-1",
    "targetId": "rival-1",
    "weaponId": "grenade",
  },
  "moki:21072026:rejected": {
    "candidateScore": "88.1281",
    "destination": {
      "x": 350,
      "y": 1260,
    },
    "movementId": "walk:350:1260",
    "movementKind": "walk",
    "movementScore": "20.8258",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:rival-1:arc-1",
    "targetId": "rival-1",
    "weaponId": "rocket",
  },
  "moki:21072026:rival": {
    "candidateScore": "79.3201",
    "destination": {
      "x": 1550,
      "y": 810,
    },
    "movementId": "walk:1550:810",
    "movementKind": "walk",
    "movementScore": "20.4631",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:crew-moki:arc-2",
    "targetId": "crew-moki",
    "weaponId": "rocket",
  },
  "moki:21072127:forced-breaker": {
    "candidateScore": "65.3451",
    "destination": {
      "x": 350,
      "y": 1260,
    },
    "movementId": "jump:350:1260",
    "movementKind": "jump",
    "movementScore": "19.8845",
    "preferenceFellBack": false,
    "selectedCandidateId": "breaker:rival-1:arc-1",
    "targetId": "rival-1",
    "weaponId": "breaker",
  },
  "moki:21072127:preference": {
    "candidateScore": "70.1840",
    "destination": {
      "x": 610,
      "y": 1314,
    },
    "movementId": "jump:610:1314",
    "movementKind": "jump",
    "movementScore": "13.1494",
    "preferenceFellBack": false,
    "selectedCandidateId": "grenade:rival-1:arc-1",
    "targetId": "rival-1",
    "weaponId": "grenade",
  },
  "moki:21072127:rejected": {
    "candidateScore": "88.1482",
    "destination": {
      "x": 350,
      "y": 1260,
    },
    "movementId": "jump:350:1260",
    "movementKind": "jump",
    "movementScore": "19.8845",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:rival-1:arc-1",
    "targetId": "rival-1",
    "weaponId": "rocket",
  },
  "moki:21072127:rival": {
    "candidateScore": "80.0617",
    "destination": {
      "x": 1290,
      "y": 836,
    },
    "movementId": "walk:1290:836",
    "movementKind": "walk",
    "movementScore": "21.9309",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:crew-moki:arc-1",
    "targetId": "crew-moki",
    "weaponId": "rocket",
  },
  "pop-diva:21072026:forced-breaker": {
    "candidateScore": "204.7017",
    "destination": {
      "x": 350,
      "y": 1260,
    },
    "movementId": "jump:350:1260",
    "movementKind": "jump",
    "movementScore": "38.4838",
    "preferenceFellBack": false,
    "selectedCandidateId": "breaker:rival-1:arc-1",
    "targetId": "rival-1",
    "weaponId": "breaker",
  },
  "pop-diva:21072026:preference": {
    "candidateScore": "221.9471",
    "destination": {
      "x": 350,
      "y": 1260,
    },
    "movementId": "jump:350:1260",
    "movementKind": "jump",
    "movementScore": "38.4838",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:rival-3:arc-5",
    "targetId": "rival-3",
    "weaponId": "rocket",
  },
  "pop-diva:21072026:rejected": {
    "candidateScore": "221.5635",
    "destination": {
      "x": 350,
      "y": 1260,
    },
    "movementId": "jump:350:1260",
    "movementKind": "jump",
    "movementScore": "38.4838",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:rival-1:arc-1",
    "targetId": "rival-1",
    "weaponId": "rocket",
  },
  "pop-diva:21072026:rival": {
    "candidateScore": "79.2956",
    "destination": {
      "x": 1550,
      "y": 810,
    },
    "movementId": "walk:1550:810",
    "movementKind": "walk",
    "movementScore": "20.4631",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:crew-pop-diva:arc-1",
    "targetId": "crew-pop-diva",
    "weaponId": "rocket",
  },
  "pop-diva:21072127:forced-breaker": {
    "candidateScore": "203.6939",
    "destination": {
      "x": 350,
      "y": 1260,
    },
    "movementId": "jump:350:1260",
    "movementKind": "jump",
    "movementScore": "38.2107",
    "preferenceFellBack": false,
    "selectedCandidateId": "breaker:rival-1:arc-1",
    "targetId": "rival-1",
    "weaponId": "breaker",
  },
  "pop-diva:21072127:preference": {
    "candidateScore": "221.7915",
    "destination": {
      "x": 350,
      "y": 1260,
    },
    "movementId": "jump:350:1260",
    "movementKind": "jump",
    "movementScore": "38.2107",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:rival-3:arc-5",
    "targetId": "rival-3",
    "weaponId": "rocket",
  },
  "pop-diva:21072127:rejected": {
    "candidateScore": "221.5837",
    "destination": {
      "x": 350,
      "y": 1260,
    },
    "movementId": "jump:350:1260",
    "movementKind": "jump",
    "movementScore": "38.2107",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:rival-1:arc-1",
    "targetId": "rival-1",
    "weaponId": "rocket",
  },
  "pop-diva:21072127:rival": {
    "candidateScore": "78.9215",
    "destination": {
      "x": 1290,
      "y": 836,
    },
    "movementId": "walk:1290:836",
    "movementKind": "walk",
    "movementScore": "21.9309",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:crew-pop-diva:arc-1",
    "targetId": "crew-pop-diva",
    "weaponId": "rocket",
  },
  "raccoon-bandit:21072026:forced-breaker": {
    "candidateScore": "51.7395",
    "destination": {
      "x": 350,
      "y": 1260,
    },
    "movementId": "walk:350:1260",
    "movementKind": "walk",
    "movementScore": "22.0587",
    "preferenceFellBack": false,
    "selectedCandidateId": "breaker:rival-1:arc-1",
    "targetId": "rival-1",
    "weaponId": "breaker",
  },
  "raccoon-bandit:21072026:preference": {
    "candidateScore": "75.0797",
    "destination": {
      "x": 350,
      "y": 1260,
    },
    "movementId": "walk:350:1260",
    "movementKind": "walk",
    "movementScore": "22.0587",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:rival-1:arc-1",
    "targetId": "rival-1",
    "weaponId": "rocket",
  },
  "raccoon-bandit:21072026:rejected": {
    "candidateScore": "73.6276",
    "destination": {
      "x": 350,
      "y": 1260,
    },
    "movementId": "walk:350:1260",
    "movementKind": "walk",
    "movementScore": "22.0587",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:rival-1:arc-2",
    "targetId": "rival-1",
    "weaponId": "rocket",
  },
  "raccoon-bandit:21072026:rival": {
    "candidateScore": "80.5454",
    "destination": {
      "x": 1550,
      "y": 810,
    },
    "movementId": "walk:1550:810",
    "movementKind": "walk",
    "movementScore": "20.4631",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:crew-raccoon-bandit:arc-1",
    "targetId": "crew-raccoon-bandit",
    "weaponId": "rocket",
  },
  "raccoon-bandit:21072127:forced-breaker": {
    "candidateScore": "50.7317",
    "destination": {
      "x": 350,
      "y": 1260,
    },
    "movementId": "walk:350:1260",
    "movementKind": "walk",
    "movementScore": "19.3454",
    "preferenceFellBack": false,
    "selectedCandidateId": "breaker:rival-1:arc-1",
    "targetId": "rival-1",
    "weaponId": "breaker",
  },
  "raccoon-bandit:21072127:preference": {
    "candidateScore": "75.0998",
    "destination": {
      "x": 350,
      "y": 1260,
    },
    "movementId": "walk:350:1260",
    "movementKind": "walk",
    "movementScore": "19.3454",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:rival-1:arc-1",
    "targetId": "rival-1",
    "weaponId": "rocket",
  },
  "raccoon-bandit:21072127:rejected": {
    "candidateScore": "74.4134",
    "destination": {
      "x": 350,
      "y": 1260,
    },
    "movementId": "walk:350:1260",
    "movementKind": "walk",
    "movementScore": "19.3454",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:rival-1:arc-2",
    "targetId": "rival-1",
    "weaponId": "rocket",
  },
  "raccoon-bandit:21072127:rival": {
    "candidateScore": "79.0690",
    "destination": {
      "x": 1290,
      "y": 836,
    },
    "movementId": "walk:1290:836",
    "movementKind": "walk",
    "movementScore": "21.9309",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:crew-raccoon-bandit:arc-2",
    "targetId": "crew-raccoon-bandit",
    "weaponId": "rocket",
  },
  "slime:21072026:forced-breaker": {
    "candidateScore": "51.7395",
    "destination": {
      "x": 350,
      "y": 1260,
    },
    "movementId": "walk:350:1260",
    "movementKind": "walk",
    "movementScore": "21.1974",
    "preferenceFellBack": false,
    "selectedCandidateId": "breaker:rival-1:arc-1",
    "targetId": "rival-1",
    "weaponId": "breaker",
  },
  "slime:21072026:preference": {
    "candidateScore": "75.0797",
    "destination": {
      "x": 350,
      "y": 1260,
    },
    "movementId": "walk:350:1260",
    "movementKind": "walk",
    "movementScore": "21.1974",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:rival-1:arc-1",
    "targetId": "rival-1",
    "weaponId": "rocket",
  },
  "slime:21072026:rejected": {
    "candidateScore": "73.6276",
    "destination": {
      "x": 350,
      "y": 1260,
    },
    "movementId": "walk:350:1260",
    "movementKind": "walk",
    "movementScore": "21.1974",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:rival-1:arc-2",
    "targetId": "rival-1",
    "weaponId": "rocket",
  },
  "slime:21072026:rival": {
    "candidateScore": "79.7240",
    "destination": {
      "x": 1550,
      "y": 810,
    },
    "movementId": "walk:1550:810",
    "movementKind": "walk",
    "movementScore": "20.4631",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:crew-slime:arc-2",
    "targetId": "crew-slime",
    "weaponId": "rocket",
  },
  "slime:21072127:forced-breaker": {
    "candidateScore": "50.7317",
    "destination": {
      "x": 350,
      "y": 1260,
    },
    "movementId": "walk:350:1260",
    "movementKind": "walk",
    "movementScore": "21.9737",
    "preferenceFellBack": false,
    "selectedCandidateId": "breaker:rival-1:arc-1",
    "targetId": "rival-1",
    "weaponId": "breaker",
  },
  "slime:21072127:preference": {
    "candidateScore": "75.0998",
    "destination": {
      "x": 350,
      "y": 1260,
    },
    "movementId": "walk:350:1260",
    "movementKind": "walk",
    "movementScore": "21.9737",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:rival-1:arc-1",
    "targetId": "rival-1",
    "weaponId": "rocket",
  },
  "slime:21072127:rejected": {
    "candidateScore": "74.4134",
    "destination": {
      "x": 350,
      "y": 1260,
    },
    "movementId": "walk:350:1260",
    "movementKind": "walk",
    "movementScore": "21.9737",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:rival-1:arc-2",
    "targetId": "rival-1",
    "weaponId": "rocket",
  },
  "slime:21072127:rival": {
    "candidateScore": "79.6313",
    "destination": {
      "x": 1290,
      "y": 836,
    },
    "movementId": "walk:1290:836",
    "movementKind": "walk",
    "movementScore": "21.9309",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:crew-slime:arc-1",
    "targetId": "crew-slime",
    "weaponId": "rocket",
  },
}
`;

exports[`planning golden master (Task 021, Schritt 0) > freezes first-turn planning on space-resort 1`] = `
{
  "chicken:21072026:forced-breaker": {
    "candidateScore": "66.1788",
    "destination": {
      "x": 450,
      "y": 338,
    },
    "movementId": "jump:450:338",
    "movementKind": "jump",
    "movementScore": "14.0575",
    "preferenceFellBack": false,
    "selectedCandidateId": "breaker:rival-3:arc-2",
    "targetId": "rival-3",
    "weaponId": "breaker",
  },
  "chicken:21072026:preference": {
    "candidateScore": "88.4173",
    "destination": {
      "x": 450,
      "y": 338,
    },
    "movementId": "jump:450:338",
    "movementKind": "jump",
    "movementScore": "14.0575",
    "preferenceFellBack": true,
    "selectedCandidateId": "rocket:rival-3:arc-4",
    "targetId": "rival-3",
    "weaponId": "rocket",
  },
  "chicken:21072026:rejected": {
    "candidateScore": "87.4258",
    "destination": {
      "x": 450,
      "y": 338,
    },
    "movementId": "jump:450:338",
    "movementKind": "jump",
    "movementScore": "14.0575",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:rival-1:arc-4",
    "targetId": "rival-1",
    "weaponId": "rocket",
  },
  "chicken:21072026:rival": {
    "candidateScore": "72.8014",
    "destination": {
      "x": 320,
      "y": 888,
    },
    "movementId": "walk:320:888",
    "movementKind": "walk",
    "movementScore": "15.3217",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:crew-chicken:arc-3",
    "targetId": "crew-chicken",
    "weaponId": "rocket",
  },
  "chicken:21072127:forced-breaker": {
    "candidateScore": "66.8742",
    "destination": {
      "x": 450,
      "y": 338,
    },
    "movementId": "jump:450:338",
    "movementKind": "jump",
    "movementScore": "15.9851",
    "preferenceFellBack": false,
    "selectedCandidateId": "breaker:rival-3:arc-3",
    "targetId": "rival-3",
    "weaponId": "breaker",
  },
  "chicken:21072127:preference": {
    "candidateScore": "87.5696",
    "destination": {
      "x": 450,
      "y": 338,
    },
    "movementId": "jump:450:338",
    "movementKind": "jump",
    "movementScore": "15.9851",
    "preferenceFellBack": true,
    "selectedCandidateId": "rocket:rival-2:arc-4",
    "targetId": "rival-2",
    "weaponId": "rocket",
  },
  "chicken:21072127:rejected": {
    "candidateScore": "87.0570",
    "destination": {
      "x": 450,
      "y": 338,
    },
    "movementId": "jump:450:338",
    "movementKind": "jump",
    "movementScore": "15.9851",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:rival-3:arc-4",
    "targetId": "rival-3",
    "weaponId": "rocket",
  },
  "chicken:21072127:rival": {
    "candidateScore": "72.9344",
    "destination": {
      "x": 320,
      "y": 888,
    },
    "movementId": "walk:320:888",
    "movementKind": "walk",
    "movementScore": "15.3654",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:crew-chicken:arc-3",
    "targetId": "crew-chicken",
    "weaponId": "rocket",
  },
  "ghost:21072026:forced-breaker": {
    "candidateScore": "206.0637",
    "destination": {
      "x": 450,
      "y": 338,
    },
    "movementId": "jump:450:338",
    "movementKind": "jump",
    "movementScore": "28.3023",
    "preferenceFellBack": false,
    "selectedCandidateId": "breaker:rival-1:arc-4",
    "targetId": "rival-1",
    "weaponId": "breaker",
  },
  "ghost:21072026:preference": {
    "candidateScore": "221.9471",
    "destination": {
      "x": 450,
      "y": 338,
    },
    "movementId": "jump:450:338",
    "movementKind": "jump",
    "movementScore": "28.3023",
    "preferenceFellBack": true,
    "selectedCandidateId": "rocket:rival-3:arc-5",
    "targetId": "rival-3",
    "weaponId": "rocket",
  },
  "ghost:21072026:rejected": {
    "candidateScore": "221.8528",
    "destination": {
      "x": 450,
      "y": 338,
    },
    "movementId": "jump:450:338",
    "movementKind": "jump",
    "movementScore": "28.3023",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:rival-3:arc-4",
    "targetId": "rival-3",
    "weaponId": "rocket",
  },
  "ghost:21072026:rival": {
    "candidateScore": "71.9604",
    "destination": {
      "x": 320,
      "y": 888,
    },
    "movementId": "walk:320:888",
    "movementKind": "walk",
    "movementScore": "15.3217",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:crew-ghost:arc-4",
    "targetId": "crew-ghost",
    "weaponId": "rocket",
  },
  "ghost:21072127:forced-breaker": {
    "candidateScore": "205.9620",
    "destination": {
      "x": 450,
      "y": 338,
    },
    "movementId": "jump:450:338",
    "movementKind": "jump",
    "movementScore": "28.7261",
    "preferenceFellBack": false,
    "selectedCandidateId": "breaker:rival-2:arc-4",
    "targetId": "rival-2",
    "weaponId": "breaker",
  },
  "ghost:21072127:preference": {
    "candidateScore": "221.7915",
    "destination": {
      "x": 450,
      "y": 338,
    },
    "movementId": "jump:450:338",
    "movementKind": "jump",
    "movementScore": "28.7261",
    "preferenceFellBack": true,
    "selectedCandidateId": "rocket:rival-3:arc-5",
    "targetId": "rival-3",
    "weaponId": "rocket",
  },
  "ghost:21072127:rejected": {
    "candidateScore": "221.2162",
    "destination": {
      "x": 450,
      "y": 338,
    },
    "movementId": "jump:450:338",
    "movementKind": "jump",
    "movementScore": "28.7261",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:rival-1:arc-5",
    "targetId": "rival-1",
    "weaponId": "rocket",
  },
  "ghost:21072127:rival": {
    "candidateScore": "72.0800",
    "destination": {
      "x": 320,
      "y": 888,
    },
    "movementId": "walk:320:888",
    "movementKind": "walk",
    "movementScore": "15.3654",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:crew-ghost:arc-3",
    "targetId": "crew-ghost",
    "weaponId": "rocket",
  },
  "hornling:21072026:forced-breaker": {
    "candidateScore": "56.4600",
    "destination": {
      "x": 450,
      "y": 338,
    },
    "movementId": "walk:450:338",
    "movementKind": "walk",
    "movementScore": "14.0628",
    "preferenceFellBack": false,
    "selectedCandidateId": "breaker:rival-1:arc-1",
    "targetId": "rival-1",
    "weaponId": "breaker",
  },
  "hornling:21072026:preference": {
    "candidateScore": "80.1563",
    "destination": {
      "x": 450,
      "y": 338,
    },
    "movementId": "walk:450:338",
    "movementKind": "walk",
    "movementScore": "14.0628",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:rival-1:arc-1",
    "targetId": "rival-1",
    "weaponId": "rocket",
  },
  "hornling:21072026:rejected": {
    "candidateScore": "79.0159",
    "destination": {
      "x": 450,
      "y": 338,
    },
    "movementId": "walk:450:338",
    "movementKind": "walk",
    "movementScore": "14.0628",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:rival-3:arc-1",
    "targetId": "rival-3",
    "weaponId": "rocket",
  },
  "hornling:21072026:rival": {
    "candidateScore": "71.5804",
    "destination": {
      "x": 320,
      "y": 888,
    },
    "movementId": "walk:320:888",
    "movementKind": "walk",
    "movementScore": "15.3217",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:crew-hornling:arc-3",
    "targetId": "crew-hornling",
    "weaponId": "rocket",
  },
  "hornling:21072127:forced-breaker": {
    "candidateScore": "55.9650",
    "destination": {
      "x": 450,
      "y": 338,
    },
    "movementId": "walk:450:338",
    "movementKind": "walk",
    "movementScore": "15.8186",
    "preferenceFellBack": false,
    "selectedCandidateId": "breaker:rival-3:arc-1",
    "targetId": "rival-3",
    "weaponId": "breaker",
  },
  "hornling:21072127:preference": {
    "candidateScore": "80.1765",
    "destination": {
      "x": 450,
      "y": 338,
    },
    "movementId": "walk:450:338",
    "movementKind": "walk",
    "movementScore": "15.8186",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:rival-1:arc-1",
    "targetId": "rival-1",
    "weaponId": "rocket",
  },
  "hornling:21072127:rejected": {
    "candidateScore": "78.7182",
    "destination": {
      "x": 450,
      "y": 338,
    },
    "movementId": "walk:450:338",
    "movementKind": "walk",
    "movementScore": "15.8186",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:rival-1:arc-2",
    "targetId": "rival-1",
    "weaponId": "rocket",
  },
  "hornling:21072127:rival": {
    "candidateScore": "71.9513",
    "destination": {
      "x": 320,
      "y": 888,
    },
    "movementId": "walk:320:888",
    "movementKind": "walk",
    "movementScore": "15.3654",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:crew-hornling:arc-3",
    "targetId": "crew-hornling",
    "weaponId": "rocket",
  },
  "moki:21072026:forced-breaker": {
    "candidateScore": "66.1788",
    "destination": {
      "x": 450,
      "y": 338,
    },
    "movementId": "jump:450:338",
    "movementKind": "jump",
    "movementScore": "16.3520",
    "preferenceFellBack": false,
    "selectedCandidateId": "breaker:rival-3:arc-2",
    "targetId": "rival-3",
    "weaponId": "breaker",
  },
  "moki:21072026:preference": {
    "candidateScore": "88.4173",
    "destination": {
      "x": 450,
      "y": 338,
    },
    "movementId": "jump:450:338",
    "movementKind": "jump",
    "movementScore": "16.3520",
    "preferenceFellBack": true,
    "selectedCandidateId": "rocket:rival-3:arc-4",
    "targetId": "rival-3",
    "weaponId": "rocket",
  },
  "moki:21072026:rejected": {
    "candidateScore": "87.4258",
    "destination": {
      "x": 450,
      "y": 338,
    },
    "movementId": "jump:450:338",
    "movementKind": "jump",
    "movementScore": "16.3520",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:rival-1:arc-4",
    "targetId": "rival-1",
    "weaponId": "rocket",
  },
  "moki:21072026:rival": {
    "candidateScore": "72.8174",
    "destination": {
      "x": 320,
      "y": 888,
    },
    "movementId": "walk:320:888",
    "movementKind": "walk",
    "movementScore": "15.3217",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:crew-moki:arc-4",
    "targetId": "crew-moki",
    "weaponId": "rocket",
  },
  "moki:21072127:forced-breaker": {
    "candidateScore": "66.8742",
    "destination": {
      "x": 450,
      "y": 338,
    },
    "movementId": "jump:450:338",
    "movementKind": "jump",
    "movementScore": "15.2030",
    "preferenceFellBack": false,
    "selectedCandidateId": "breaker:rival-3:arc-3",
    "targetId": "rival-3",
    "weaponId": "breaker",
  },
  "moki:21072127:preference": {
    "candidateScore": "87.5696",
    "destination": {
      "x": 450,
      "y": 338,
    },
    "movementId": "jump:450:338",
    "movementKind": "jump",
    "movementScore": "15.2030",
    "preferenceFellBack": true,
    "selectedCandidateId": "rocket:rival-2:arc-4",
    "targetId": "rival-2",
    "weaponId": "rocket",
  },
  "moki:21072127:rejected": {
    "candidateScore": "87.0570",
    "destination": {
      "x": 450,
      "y": 338,
    },
    "movementId": "jump:450:338",
    "movementKind": "jump",
    "movementScore": "15.2030",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:rival-3:arc-4",
    "targetId": "rival-3",
    "weaponId": "rocket",
  },
  "moki:21072127:rival": {
    "candidateScore": "71.6095",
    "destination": {
      "x": 320,
      "y": 888,
    },
    "movementId": "walk:320:888",
    "movementKind": "walk",
    "movementScore": "15.3654",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:crew-moki:arc-3",
    "targetId": "crew-moki",
    "weaponId": "rocket",
  },
  "pop-diva:21072026:forced-breaker": {
    "candidateScore": "206.0637",
    "destination": {
      "x": 450,
      "y": 338,
    },
    "movementId": "jump:450:338",
    "movementKind": "jump",
    "movementScore": "26.5593",
    "preferenceFellBack": false,
    "selectedCandidateId": "breaker:rival-1:arc-4",
    "targetId": "rival-1",
    "weaponId": "breaker",
  },
  "pop-diva:21072026:preference": {
    "candidateScore": "221.9471",
    "destination": {
      "x": 450,
      "y": 338,
    },
    "movementId": "jump:450:338",
    "movementKind": "jump",
    "movementScore": "26.5593",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:rival-3:arc-5",
    "targetId": "rival-3",
    "weaponId": "rocket",
  },
  "pop-diva:21072026:rejected": {
    "candidateScore": "221.8528",
    "destination": {
      "x": 450,
      "y": 338,
    },
    "movementId": "jump:450:338",
    "movementKind": "jump",
    "movementScore": "26.5593",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:rival-3:arc-4",
    "targetId": "rival-3",
    "weaponId": "rocket",
  },
  "pop-diva:21072026:rival": {
    "candidateScore": "71.7452",
    "destination": {
      "x": 320,
      "y": 888,
    },
    "movementId": "walk:320:888",
    "movementKind": "walk",
    "movementScore": "15.3217",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:crew-pop-diva:arc-4",
    "targetId": "crew-pop-diva",
    "weaponId": "rocket",
  },
  "pop-diva:21072127:forced-breaker": {
    "candidateScore": "205.9620",
    "destination": {
      "x": 450,
      "y": 338,
    },
    "movementId": "jump:450:338",
    "movementKind": "jump",
    "movementScore": "28.8965",
    "preferenceFellBack": false,
    "selectedCandidateId": "breaker:rival-2:arc-4",
    "targetId": "rival-2",
    "weaponId": "breaker",
  },
  "pop-diva:21072127:preference": {
    "candidateScore": "221.7915",
    "destination": {
      "x": 450,
      "y": 338,
    },
    "movementId": "jump:450:338",
    "movementKind": "jump",
    "movementScore": "28.8965",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:rival-3:arc-5",
    "targetId": "rival-3",
    "weaponId": "rocket",
  },
  "pop-diva:21072127:rejected": {
    "candidateScore": "221.2162",
    "destination": {
      "x": 450,
      "y": 338,
    },
    "movementId": "jump:450:338",
    "movementKind": "jump",
    "movementScore": "28.8965",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:rival-1:arc-5",
    "targetId": "rival-1",
    "weaponId": "rocket",
  },
  "pop-diva:21072127:rival": {
    "candidateScore": "72.7925",
    "destination": {
      "x": 320,
      "y": 888,
    },
    "movementId": "walk:320:888",
    "movementKind": "walk",
    "movementScore": "15.3654",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:crew-pop-diva:arc-4",
    "targetId": "crew-pop-diva",
    "weaponId": "rocket",
  },
  "raccoon-bandit:21072026:forced-breaker": {
    "candidateScore": "56.4600",
    "destination": {
      "x": 450,
      "y": 338,
    },
    "movementId": "walk:450:338",
    "movementKind": "walk",
    "movementScore": "13.9040",
    "preferenceFellBack": false,
    "selectedCandidateId": "breaker:rival-1:arc-1",
    "targetId": "rival-1",
    "weaponId": "breaker",
  },
  "raccoon-bandit:21072026:preference": {
    "candidateScore": "80.1563",
    "destination": {
      "x": 450,
      "y": 338,
    },
    "movementId": "walk:450:338",
    "movementKind": "walk",
    "movementScore": "13.9040",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:rival-1:arc-1",
    "targetId": "rival-1",
    "weaponId": "rocket",
  },
  "raccoon-bandit:21072026:rejected": {
    "candidateScore": "79.0159",
    "destination": {
      "x": 450,
      "y": 338,
    },
    "movementId": "walk:450:338",
    "movementKind": "walk",
    "movementScore": "13.9040",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:rival-3:arc-1",
    "targetId": "rival-3",
    "weaponId": "rocket",
  },
  "raccoon-bandit:21072026:rival": {
    "candidateScore": "72.5641",
    "destination": {
      "x": 320,
      "y": 888,
    },
    "movementId": "walk:320:888",
    "movementKind": "walk",
    "movementScore": "15.3217",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:crew-raccoon-bandit:arc-3",
    "targetId": "crew-raccoon-bandit",
    "weaponId": "rocket",
  },
  "raccoon-bandit:21072127:forced-breaker": {
    "candidateScore": "55.9650",
    "destination": {
      "x": 450,
      "y": 338,
    },
    "movementId": "walk:450:338",
    "movementKind": "walk",
    "movementScore": "15.2476",
    "preferenceFellBack": false,
    "selectedCandidateId": "breaker:rival-3:arc-1",
    "targetId": "rival-3",
    "weaponId": "breaker",
  },
  "raccoon-bandit:21072127:preference": {
    "candidateScore": "80.1765",
    "destination": {
      "x": 450,
      "y": 338,
    },
    "movementId": "walk:450:338",
    "movementKind": "walk",
    "movementScore": "15.2476",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:rival-1:arc-1",
    "targetId": "rival-1",
    "weaponId": "rocket",
  },
  "raccoon-bandit:21072127:rejected": {
    "candidateScore": "78.7182",
    "destination": {
      "x": 450,
      "y": 338,
    },
    "movementId": "walk:450:338",
    "movementKind": "walk",
    "movementScore": "15.2476",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:rival-1:arc-2",
    "targetId": "rival-1",
    "weaponId": "rocket",
  },
  "raccoon-bandit:21072127:rival": {
    "candidateScore": "72.2142",
    "destination": {
      "x": 320,
      "y": 888,
    },
    "movementId": "walk:320:888",
    "movementKind": "walk",
    "movementScore": "15.3654",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:crew-raccoon-bandit:arc-3",
    "targetId": "crew-raccoon-bandit",
    "weaponId": "rocket",
  },
  "slime:21072026:forced-breaker": {
    "candidateScore": "56.4600",
    "destination": {
      "x": 450,
      "y": 338,
    },
    "movementId": "walk:450:338",
    "movementKind": "walk",
    "movementScore": "15.8726",
    "preferenceFellBack": false,
    "selectedCandidateId": "breaker:rival-1:arc-1",
    "targetId": "rival-1",
    "weaponId": "breaker",
  },
  "slime:21072026:preference": {
    "candidateScore": "80.1563",
    "destination": {
      "x": 450,
      "y": 338,
    },
    "movementId": "walk:450:338",
    "movementKind": "walk",
    "movementScore": "15.8726",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:rival-1:arc-1",
    "targetId": "rival-1",
    "weaponId": "rocket",
  },
  "slime:21072026:rejected": {
    "candidateScore": "79.0159",
    "destination": {
      "x": 450,
      "y": 338,
    },
    "movementId": "walk:450:338",
    "movementKind": "walk",
    "movementScore": "15.8726",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:rival-3:arc-1",
    "targetId": "rival-3",
    "weaponId": "rocket",
  },
  "slime:21072026:rival": {
    "candidateScore": "71.8341",
    "destination": {
      "x": 320,
      "y": 888,
    },
    "movementId": "walk:320:888",
    "movementKind": "walk",
    "movementScore": "15.3217",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:crew-slime:arc-3",
    "targetId": "crew-slime",
    "weaponId": "rocket",
  },
  "slime:21072127:forced-breaker": {
    "candidateScore": "55.9650",
    "destination": {
      "x": 450,
      "y": 338,
    },
    "movementId": "walk:450:338",
    "movementKind": "walk",
    "movementScore": "14.0574",
    "preferenceFellBack": false,
    "selectedCandidateId": "breaker:rival-3:arc-1",
    "targetId": "rival-3",
    "weaponId": "breaker",
  },
  "slime:21072127:preference": {
    "candidateScore": "80.1765",
    "destination": {
      "x": 450,
      "y": 338,
    },
    "movementId": "walk:450:338",
    "movementKind": "walk",
    "movementScore": "14.0574",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:rival-1:arc-1",
    "targetId": "rival-1",
    "weaponId": "rocket",
  },
  "slime:21072127:rejected": {
    "candidateScore": "78.7182",
    "destination": {
      "x": 450,
      "y": 338,
    },
    "movementId": "walk:450:338",
    "movementKind": "walk",
    "movementScore": "14.0574",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:rival-1:arc-2",
    "targetId": "rival-1",
    "weaponId": "rocket",
  },
  "slime:21072127:rival": {
    "candidateScore": "72.9652",
    "destination": {
      "x": 320,
      "y": 888,
    },
    "movementId": "walk:320:888",
    "movementKind": "walk",
    "movementScore": "15.3654",
    "preferenceFellBack": false,
    "selectedCandidateId": "rocket:crew-slime:arc-3",
    "targetId": "crew-slime",
    "weaponId": "rocket",
  },
}
`;
